# image-generator-mcp

./: .env-sample  .gitignore  README.md  comfyui_colab.ipynb  generate_prd.md  improve_plan.md  md2pdf.sh  pyproject.toml  setup.sh
.config/cell_cover/: last_job.json  last_succeed.json
.cursor/: mcp.json
.cursor/rules/: antiai.mdc  paperguide.mdc  project-guidelines.mdc
cell_cover/: .gitignore  EXAMPLES.md  README.md  README_IMAGE_UPLOADER.md  batch_generate_covers.sh  cli.py  constants.py  fetch_job_status.py  generate_cover.py  generate_cover.sh  improve-plan.md  prompts_config.json  test_generate_cover.py
cell_cover/commands/: action.py  blend.py  create.py  describe.py  generate.py  list_cmd.py  list_styles.py  list_tasks.py  recreate.py  select.py  sync.py  view.py
cell_cover/metadata/: actions_metadata.json  images_metadata.bak.json  images_metadata.json  images_metadata.json.bak.20250420_203948  upload_history.json
cell_cover/reference/: cell_cover_stand.md  cover-design-guide.md  cover-design-guide_zh.md  reply.md
cell_cover/utils/: __init__.py  api.py  (+16 more)
cell_cover_generator.egg-info/: PKG-INFO
fda_reports/: FDA动物实验替代方法-评论版.md  动物实验替代报告-v1-2.md  动物实验替代报告-v1-2.wd.docx  动物实验替代报告-v1-3.md  动物实验替代报告-v1-3.wd.docx  动物实验替代报告-v1.md  动物实验替代报告-v2.md  动物实验替代报告-v2.wd.docx
others/: 导航网站流量变现策略深度评估报告.md
rules/: anti-AI.md  markdown_paper_guide.md  mcp-user.md  n8n-mcp-plan.md  other-mcp-guide.md  pandoc_guide.md  ttapi.md
scripts/: batch_generate_covers.sh  batch_generate_prompts.sh  setup.sh  setup_github_support.sh  setup_imgbb_support.sh  upload_image.sh
(+6 files in other folders)
